compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_suggest_two_modules.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n// When multiple modules export a matching value the suggestion should be\n// pluralised.\n\nimport wibble\nimport wobble\npub fn main() {\n    add(1, 1)\n}"
---
----- SOURCE CODE
-- wibble.gleam

pub fn add(x: Int, y: Int) {
    x + y
}

-- wobble.gleam

pub fn add(x: Int, y: Int) {
    x + y
}

-- main.gleam

// When multiple modules export a matching value the suggestion should be
// pluralised.

import wibble
import wobble
pub fn main() {
    add(1, 1)
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:8:5
  │
8 │     add(1, 1)
  │     ^^^

The name `add` is not in scope here.
Did you mean one of these:

  - wibble.add
  - wobble.add
